# qdnuctrl

./: .gitignore  README.md
bag_file/: 2022-05-30-22-16-50.bag  2022-05-30-22-19-58.bag  2022-05-30-22-21-50.bag
main_controller/: CMakeLists.txt  package.xml
main_controller/include/: FiniteStateMachine.h
main_controller/include/Controllers/: LegController.h  LegCtrl_R.h
main_controller/include/ConvexMPC/: Solver.h
main_controller/include/MathTools/: GaitTable.h  KinematicModel.h
main_controller/include/StateWorkerInclude/: FSM_data.h  FSM_tpcl.h  StandWorker.h  StateWorker.h  SteadyWorker.h  StopWorker.h  TrotWorker.h  Workers_common_include.h  common_defination.h  common_parameter.h
main_controller/include/reference/: common_include.h
main_controller/launch/: main.launch
main_controller/src/: demo.cpp
wtr-serial/: CMakeLists.txt  package.xml
wtr-serial/msg/: em_ev.msg  em_fb_raw.msg
wtr-serial/scripts/: data_plot.py
wtr-serial/src/: main1.cpp
wtr_serial/: CMakeLists.txt  package.xml
wtr_serial/include/: qra_serial.h
wtr_serial/scripts/: cal.py  serial.py
wtr_serial/src/: main.cpp  main1.cpp  qra_serial.cpp
wtr_serial_msg/: CMakeLists.txt  package.xml
